Fixed some spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body {
 .heading-primary {
   color: var(--color-primary-dark);
   font-size: 5rem;
-  margin-bottom: 5rem;
+  margin-bottom: 3.6rem;
 }
 
 .heading-secondary {
@@ -136,7 +136,7 @@ address {
 }
 
 .main {
-  padding: 0 6vw;
+  padding: 0 6.4rem;
   grid-area: main;
 }
 
@@ -173,15 +173,15 @@ address {
   flex-direction: column;
   gap: 10%;
   justify-content: center;
-  padding-left: 6.4vw;
+  padding-left: 6.4rem;
 }
 
 .banner__date {
-  font-size: calc(1vw + 0.7rem);
+  font-size: 2rem;
 }
 
 .banner__fair-text {
-  font-size: calc(2vw + 0.7rem);
+  font-size: 3rem;
 }
 
 
@@ -212,7 +212,7 @@ address {
 /*****************************************************************/
 
 .nav {
-  padding: 0 3vw;
+  padding: 0 3rem;
   grid-area: nav;
   align-self: start;
   border-right: 1px solid var(--color-gray-light);
@@ -413,7 +413,8 @@ address {
   overflow: hidden;
 }
 
-.questions__header {min-height: 7rem;
+.questions__header {
+  min-height: 7rem;
   background-color: var(--color-secondary-darkest);
   color: var(--color-gray-lightest);
   padding: 1rem 2rem;
